--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,8 +1,9 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-python:2-build
 
 RUN apt-get update
-RUN apt-get -y install libfftw3-dev cmake libusb-1.0-0-dev
+RUN apt-get -y install libfftw3-dev cmake libusb-1.0-0-dev libtool autoconf
 RUN apt install netcat
+
 
 RUN mkdir -p /tmp
 COPY fft_fftw.c /tmp/fft_fftw.c
