--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,7 +1,7 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-python:2-build
 
 RUN apt-get update
-RUN apt-get install --yes --no-install-recommends apt-utils
+RUN apt-get -y install apt-utils
 RUN apt-get -y install libfftw3-dev cmake libusb-1.0-0-dev libtool autoconf
 RUN apt install netcat
 
