--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,7 +1,6 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-python:2-build
 
 RUN apt-get update
-RUN apt-get -y install apt-utils
 RUN apt-get -y install libfftw3-dev cmake libusb-1.0-0-dev libtool autoconf
 RUN apt install netcat
 
@@ -18,6 +17,7 @@ RUN ["/usr/src/app/install.sh"]
 
 COPY entry.sh /usr/src/app/entry.sh
 RUN ["chmod", "+x", "/usr/src/app/entry.sh"]
+RUN apt-get upgrade -y
 
 COPY config_alt.py /usr/src/app/openwebrx/config_alt.py
 
