--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -8,6 +8,8 @@ RUN apt-get update
 
 RUN apt-get -y install git build-essential cmake libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config
 
+RUN apt-get install sox
+RUN apt-get install portaudio19-dev
 RUN libtoolize
 
 RUN mkdir -p /tmp
