--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -10,6 +10,9 @@ RUN apt-get -y install git build-essential cmake libfftw3-dev python3 python3-se
 
 RUN apt-get install sox
 RUN apt-get install portaudio19-dev
+RUN apt-get install libasound2-dev
+RUN apt-get install direwolf
+
 RUN libtoolize
 
 RUN mkdir -p /tmp
