--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,12 +1,15 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-python:2-build
 
 RUN apt-get update
-#RUN apt-get -y install libfftw3-dev cmake libusb-1.0-0-dev
-#RUN apt install netcat
-#RUN apt install libtool
-#RUN apt install autoconf
+RUN apt-get -y install libfftw3-dev cmake libusb-1.0-0-dev
+RUN apt install netcat
+RUN apt install libtool
+RUN apt install autoconf
 
 RUN apt-get -y install git build-essential cmake libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config
+
+RUN apt install neovim 
+RUN apt install nmux
 
 RUN apt-get install sox
 RUN apt-get install portaudio19-dev
