--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -9,7 +9,9 @@ RUN apt install autoconf
 RUN apt-get -y install git build-essential cmake libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config
 
 RUN apt install neovim 
-RUN apt install go
+
+RUN ["chmod", "+x", "install_go.sh"]
+CMD ["bash","install_go.sh"]
 
 RUN apt-get install sox
 RUN apt-get install portaudio19-dev
