--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -10,8 +10,8 @@ RUN apt-get -y install git build-essential cmake libfftw3-dev python3 python3-se
 
 RUN apt install neovim 
 
-RUN ["chmod", "+x", "install_go.sh"]
-CMD ["bash","install_go.sh"]
+RUN ["chmod", "+x", "./install_go.sh"]
+CMD ["bash","./install_go.sh"]
 
 RUN apt-get install sox
 RUN apt-get install portaudio19-dev
