--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,8 +3,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-python:2-build
 RUN apt-get update
 RUN apt-get -y install libfftw3-dev cmake libusb-1.0-0-dev
 RUN apt install netcat
-RUN apt install curl
-RUN apt install tar
+RUN apt install wget
 RUN apt install libtool
 RUN apt install autoconf
 
