--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,30 +1,15 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-python:2-build
 
 RUN apt-get update
-RUN apt-get -y install libfftw3-dev cmake libusb-1.0-0-dev
-RUN apt install netcat
-RUN apt install wget
-RUN apt install libtool
-RUN apt install autoconf
+RUN apt-get -y install neovim netcat libtool autoconf libfftw3-dev cmake libusb-1.0-0-dev git build-essential cmake libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config sox portaudio19-dev libasound2-dev direwolf asciidoc automake libtool texinfo gfortran libhamlib-dev qtbase5-dev qtmultimedia5-dev qttools5-dev asciidoctor libqt5serialport5-dev qttools5-dev-tools libudev-dev xsltproc
+ 
 
-RUN apt-get -y install git build-essential cmake libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config
+#COPY install_go.sh /usr/src/app/install_go.sh
+#RUN ["chmod", "+x", "/usr/src/app/install_go.sh"]
+#RUN ["/usr/src/app/install_go.sh"]
+#RUN echo "export PATH=/usr/local/go/bin:${PATH}" >> /root/.bashrc
 
-RUN apt install neovim 
-
-"""
-COPY install_go.sh /usr/src/app/install_go.sh
-RUN ["chmod", "+x", "/usr/src/app/install_go.sh"]
-RUN ["/usr/src/app/install_go.sh"]
-RUN echo "export PATH=/usr/local/go/bin:${PATH}" >> /root/.bashrc
-"""
-
-RUN apt-get install sox
-RUN apt-get install portaudio19-dev
-RUN apt-get install libasound2-dev
-RUN apt-get install direwolf
-RUN apt-get install asciidoc automake libtool texinfo gfortran libhamlib-dev qtbase5-dev qtmultimedia5-dev qttools5-dev asciidoctor libqt5serialport5-dev qttools5-dev-tools libudev-dev xsltproc
-
-RUN libtoolize
+#RUN libtoolize
 
 RUN mkdir -p /tmp
 COPY fft_fftw.c /tmp/fft_fftw.c
