--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,12 +2,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-python:2-build
 
 RUN apt-get update
 RUN apt-get -y install curl automake golang neovim netcat libtool autoconf libfftw3-dev cmake libusb-1.0-0-dev git build-essential cmake libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config sox portaudio19-dev libasound2-dev direwolf asciidoc automake libtool texinfo gfortran libhamlib-dev qtbase5-dev qtmultimedia5-dev qttools5-dev asciidoctor libqt5serialport5-dev qttools5-dev-tools libudev-dev xsltproc
- 
-
-#COPY install_go.sh /usr/src/app/install_go.sh
-#RUN ["chmod", "+x", "/usr/src/app/install_go.sh"]
-#RUN ["/usr/src/app/install_go.sh"]
-#RUN echo "export PATH=/usr/local/go/bin:${PATH}" >> /root/.bashrc
+RUN apt-get upgrade -y
 
 RUN mkdir -p /tmp
 COPY fft_fftw.c /tmp/fft_fftw.c
@@ -21,7 +16,6 @@ RUN ["/usr/src/app/install.sh"]
 
 COPY entry.sh /usr/src/app/entry.sh
 RUN ["chmod", "+x", "/usr/src/app/entry.sh"]
-#RUN apt-get upgrade -y
 
 COPY config_alt.py /usr/src/app/openwebrx/config_alt.py
 
