--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -13,7 +13,7 @@ RUN apt-get upgrade -y
 
 RUN mkdir -p /tmp
 COPY fft_fftw.c /tmp/fft_fftw.c
-pCOPY fft_fftw.h /tmp/fft_fftw.h
+COPY fft_fftw.h /tmp/fft_fftw.h
 COPY Makefile /tmp/Makefile
 COPY sdrhu.py /tmp/sdrhu.py
 
