--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,13 +1,12 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-python:2-build
 
-RUN apt-get update
+RUN apt-get update && apt-get upgrade -y
 #RUN apt install mplayer libfftw3-dev octave gnuplot gnuplot-x11 automake golang neovim netcat libtool autoconf libfftw3-dev cmake libusb-1.0-0-dev git build-essential cmake libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config sox portaudio19-dev libasound2-dev direwolf asciidoc automake libtool texinfo gfortran libhamlib-dev qtbase5-dev qtmultimedia5-dev qttools5-dev asciidoctor libqt5serialport5-dev qttools5-dev-tools libudev-dev xsltproc libsoapysdr0.6 libsoapysdr-dev soapysdr-tools soapysdr-module-all
 RUN apt install git golang make cmake build-essential libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config libsoapysdr0.6 libsoapysdr-dev soapysdr-tools soapysdr-module-all sox portaudio19-dev libasound2-dev direwolf asciidoc texinfo gfortran libhamlib-dev qtbase5-dev qtmultimedia5-dev qttools5-dev asciidoctor libqt5serialport5-dev qttools5-dev-tools libudev-dev xsltproc 
-RUN apt-get upgrade -y
 
-RUN mkdir -p /tmp
-COPY fft_fftw.c /tmp/fft_fftw.c
-COPY fft_fftw.h /tmp/fft_fftw.h
+#RUN mkdir -p /tmp
+#COPY fft_fftw.c /tmp/fft_fftw.c
+#COPY fft_fftw.h /tmp/fft_fftw.h
 
 COPY install.sh /usr/src/app/install.sh
 RUN ["chmod", "+x", "/usr/src/app/install.sh"]
@@ -15,5 +14,4 @@ RUN ["/usr/src/app/install.sh"]
 
 COPY entry.sh /usr/src/app/entry.sh
 RUN ["chmod", "+x", "/usr/src/app/entry.sh"]
-
 CMD ["bash","/usr/src/app/entry.sh"]
