--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,16 +5,14 @@ RUN apt-get update && apt-get upgrade -y
 RUN apt install git golang make cmake build-essential libfftw3-dev python3 python3-setuptools rtl-sdr netcat libitpp-dev libsndfile-dev librtlsdr-dev automake autoconf libtool pkg-config libsoapysdr0.6 libsoapysdr-dev soapysdr-tools soapysdr-module-all sox portaudio19-dev libasound2-dev direwolf asciidoc texinfo gfortran libhamlib-dev qtbase5-dev qtmultimedia5-dev qttools5-dev asciidoctor libqt5serialport5-dev qttools5-dev-tools libudev-dev xsltproc 
 
 RUN mkdir -p /mytmp
-COPY fft_fftw.c /mytmp/fft_fftw.c
-COPY fft_fftw.h /mytmp/fft_fftw.h
-#COPY myconf.py /mytmp/myconf.py
-
+COPY *.py /mytmp/
 
 COPY install.sh /usr/src/app/install.sh
 RUN ["chmod", "+x", "/usr/src/app/install.sh"]
 RUN ["/usr/src/app/install.sh"]
 
 COPY entry.sh /usr/src/app/entry.sh
+COPY myconf.py /usr/src/app/myconf.py
 COPY config_alt.py /usr/src/app/config_alt.py
 RUN ["chmod", "+x", "/usr/src/app/entry.sh"]
 CMD ["bash","/usr/src/app/entry.sh"]
